[tool.poetry]
name = "chatgtp_101"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-decouple = "^3.8"
requests = "^2.30.0"
black = "^23.3.0"
isort = "^5.12.0"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
